[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rabbitmq_sdk"
version = "0.0.1"
description = "RabbitMQ sdk for projects"
authors = [
    { name = "Matteo Galvagni", email = "nope@mail.com" }
]
dependencies = [
    "pika==1.3.2"
]
[tool.setuptools.packages.find]
where = ["src"]